syntax = "proto3";

option csharp_namespace = "GrpcService";

package sample;

// The greeting service definition.
service Sample {
  // Sends a greeting
  rpc GetFullName (SampleRequest) returns (SampleResponse);
}

message SampleRequest {
	string firstName = 1;
	string lastName = 2;
}

//developers.google.com/protocol-buffers/docs/proto3
message SampleResponse {
	string fullName = 1;
}